--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,14 +9,10 @@
     <!-- Header -->
     <header>
       <nav>
-        <a href="/"> <img src="./img/logo.svg" alt="Logo" /></a>
+        <p><a href="./index.html">Web Studio</a></p>
 
         <ul>
-          <li>
-            <a href="">Студия</a>
-            <img src="./img/finger_black.svg" alt="Black finger" />
-            <img src="./img/line.svg" alt="Underline" />
-          </li>
+          <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
@@ -27,7 +23,6 @@
               <img src="./img/cover_icon.svg" alt="Cover" />
               info@devstudio.com</a
             >
-            <img src="./img/finger_black.svg" alt="Black finger" />
           </li>
           <li>
             <a href="tel:+380961111111">
@@ -51,7 +46,6 @@
         <ul>
           <li>
             <img src="./img/antenna.svg" alt="Antenna" width="278" />
-            <img src="./img/finger_black.svg" alt="Black finger" />
             <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
@@ -109,77 +103,117 @@
       </section>
 
       <!-- Team -->
-      <section>
+
+      <section lang="en">
         <h2>Наша команда</h2>
         <ul>
           <li>
             <img src="./img/john.jpg" alt="John" width="278" />
             <h3>John Smith</h3>
             <p>Product Designer</p>
-            <a href="https://www.instagram.com/" target="_blank"
-              ><img src="./img/insta_blue.svg" alt="Instagram_blue"
-            /></a>
-            <img src="./img/finger_black.svg" alt="Black finger" />
-            <a href="https://www.twitter.com/" target="_blank"
-              ><img src="./img/twitter.svg" alt="Twitter"
-            /></a>
-            <a href="https://www.facebook.com/" target="_blank"
-              ><img src="./img/facebook.svg" alt="Facebook"
-            /></a>
-            <a href="https://www.linkedin.com/" target="_blank"
-              ><img src="./img/linkedin.svg" alt="Linkedin"
-            /></a>
+            <ul>
+              <li>
+                <a href="https://www.instagram.com/" target="_blank"
+                  ><img src="./img/instagram.svg" alt="Instagram_blue"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.twitter.com/" target="_blank"
+                  ><img src="./img/twitter.svg" alt="Twitter"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/" target="_blank"
+                  ><img src="./img/facebook.svg" alt="Facebook"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/" target="_blank"
+                  ><img src="./img/linkedin.svg" alt="Linkedin"
+                /></a>
+              </li>
+            </ul>
           </li>
           <li>
             <img src="./img/marta.jpg" alt="Marta" width="278" />
             <h3>Marta Stewart</h3>
             <p>Frontend Developer</p>
-            <a href="https://www.instagram.com/" target="_blank"
-              ><img src="./img/instagram.svg" alt="Instagram"
-            /></a>
-            <a href="https://www.twitter.com/" target="_blank"
-              ><img src="./img/twitter.svg" alt="Twitter"
-            /></a>
-            <a href="https://www.facebook.com/" target="_blank"
-              ><img src="./img/facebook.svg" alt="Facebook"
-            /></a>
-            <a href="https://www.linkedin.com/" target="_blank"
-              ><img src="./img/linkedin.svg" alt="Linkedin"
-            /></a>
+            <ul>
+              <li>
+                <a href="https://www.instagram.com/" target="_blank"
+                  ><img src="./img/instagram.svg" alt="Instagram"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.twitter.com/" target="_blank"
+                  ><img src="./img/twitter.svg" alt="Twitter"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/" target="_blank"
+                  ><img src="./img/facebook.svg" alt="Facebook"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/" target="_blank"
+                  ><img src="./img/linkedin.svg" alt="Linkedin"
+                /></a>
+              </li>
+            </ul>
           </li>
           <li>
             <img src="./img/robert.jpg" alt="Robert" width="278" />
             <h3>Robert Jakis</h3>
             <p>Marketing</p>
-            <a href="https://www.instagram.com/" target="_blank"
-              ><img src="./img/instagram.svg" alt="Instagram"
-            /></a>
-            <a href="https://www.twitter.com/" target="_blank"
-              ><img src="./img/twitter.svg" alt="Twitter"
-            /></a>
-            <a href="https://www.facebook.com/" target="_blank"
-              ><img src="./img/facebook.svg" alt="Facebook"
-            /></a>
-            <a href="https://www.linkedin.com/" target="_blank"
-              ><img src="./img/linkedin.svg" alt="Linkedin"
-            /></a>
+            <ul>
+              <li>
+                <a href="https://www.instagram.com/" target="_blank"
+                  ><img src="./img/instagram.svg" alt="Instagram"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.twitter.com/" target="_blank"
+                  ><img src="./img/twitter.svg" alt="Twitter"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/" target="_blank"
+                  ><img src="./img/facebook.svg" alt="Facebook"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/" target="_blank"
+                  ><img src="./img/linkedin.svg" alt="Linkedin"
+                /></a>
+              </li>
+            </ul>
           </li>
           <li>
             <img src="./img/martin.jpg" alt="Martin" width="278" />
             <h3>Martin Doe</h3>
             <p>UI Designerr</p>
-            <a href="https://www.instagram.com/" target="_blank"
-              ><img src="./img/instagram.svg" alt="Instagram"
-            /></a>
-            <a href="https://www.twitter.com/" target="_blank"
-              ><img src="./img/twitter.svg" alt="Twitter"
-            /></a>
-            <a href="https://www.facebook.com/" target="_blank"
-              ><img src="./img/facebook.svg" alt="Facebook"
-            /></a>
-            <a href="https://www.linkedin.com/" target="_blank"
-              ><img src="./img/linkedin.svg" alt="Linkedin"
-            /></a>
+            <ul>
+              <li>
+                <a href="https://www.instagram.com/" target="_blank"
+                  ><img src="./img/instagram.svg" alt="Instagram"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.twitter.com/" target="_blank"
+                  ><img src="./img/twitter.svg" alt="Twitter"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/" target="_blank"
+                  ><img src="./img/facebook.svg" alt="Facebook"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/" target="_blank"
+                  ><img src="./img/linkedin.svg" alt="Linkedin"
+                /></a>
+              </li>
+            </ul>
           </li>
         </ul>
       </section>
@@ -224,22 +258,54 @@
 
     <!-- Footer -->
     <footer>
-      г. Киев, пр-т Леси Украинки, 26 info@example.com +38 099 111 11 11
-      подписаться на рассылку E-mail Подписаться 2020 | Developed by GoIT
-      Students
-      <a href="https://www.instagram.com/" target="_blank"
-        ><img src="./img/insta_circle.svg" alt="Instagram_circle"
-      /></a>
-      <a href="https://www.twitter.com/" target="_blank"
-        ><img src="./img/twitter_circle.svg" alt="Twitter_circle"
-      /></a>
-      <img src="./img/finger_white.svg" alt="White finger" />
-      <a href="https://www.facebook.com/" target="_blank"
-        ><img src="./img/facebook_circle.svg" alt="Facebook_circle"
-      /></a>
-      <a href="https://www.linkedin.com/" target="_blank"
-        ><img src="./img/linkedin_circle.svg" alt="Linkedin_circle"
-      /></a>
+      <p><a href="./index.html">Web Studio</a></p>
+      <adres>
+        г. Киев, пр-т Леси Украинки, 26 <br />
+        info@example.com<br />
+        +38 099 111 11 11
+      </adres>
+      <h2>присоединяйтесь</h2>
+      <ul>
+        <li>
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            aria-label="Ссылка на Instagram"
+            >Instagram</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.twitter.com/"
+            target="_blank"
+            aria-label="Ссылка на Twitter"
+            >Twitter</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            aria-label="Ссылка на Facebook"
+            >Facebook</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.linkedin.com/"
+            target="_blank"
+            aria-label="Ссылка на LinkedIn"
+            >LinkedIn</a
+          >
+        </li>
+      </ul>
+      <h2>подписаться на рассылку</h2>
+      <form>
+        <label>Email</label>
+        <input type="email" name="E-mail" />
+        <button>Подписаться</button>
+      </form>
+      <p>2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
