--- a/index.html
+++ b/index.html
@@ -223,34 +223,22 @@
         <h2>Постоянные клиенты</h2>
         <ul>
           <li>
-            <a href="">
-              <img src="./img/company1.svg" alt="Company1" width="175"
-            /></a>
+            <a href=""> <img src="./img/company1.svg" alt="Company1" /></a>
           </li>
           <li>
-            <a href="">
-              <img src="./img/company2.svg" alt="Company2" width="175"
-            /></a>
+            <a href=""> <img src="./img/company2.svg" alt="Company2" /></a>
           </li>
           <li>
-            <a href="">
-              <img src="./img/company3.svg" alt="Company3" width="175"
-            /></a>
+            <a href=""> <img src="./img/company3.svg" alt="Company3" /></a>
           </li>
           <li>
-            <a href="">
-              <img src="./img/company4.svg" alt="Company4" width="175"
-            /></a>
+            <a href=""> <img src="./img/company4.svg" alt="Company4" /></a>
           </li>
           <li>
-            <a href="">
-              <img src="./img/company5.svg" alt="Company5" width="175"
-            /></a>
+            <a href=""> <img src="./img/company5.svg" alt="Company5" /></a>
           </li>
           <li>
-            <a href="">
-              <img src="./img/company6.svg" alt="Company6" width="175"
-            /></a>
+            <a href=""> <img src="./img/company6.svg" alt="Company6" /></a>
           </li>
         </ul>
       </section>
