Исправляет тег адрес

--- a/index.html
+++ b/index.html
@@ -247,11 +247,11 @@
     <!-- Footer -->
     <footer>
       <p><a href="./index.html">Web Studio</a></p>
-      <adres>
+      <address>
         г. Киев, пр-т Леси Украинки, 26 <br />
         info@example.com<br />
         +38 099 111 11 11
-      </adres>
+      </address>
       <h2>присоединяйтесь</h2>
       <ul>
         <li>
