--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
     <!-- Header -->
     <header>
       <nav>
-        <p><a href="./index.html">Web Studio</a></p>
+        <a href="./index.html">Web Studio</a>
 
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
-
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com ">
-              <img src="./img/cover_icon.svg" alt="Cover" />
-              info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111">
-              <img src="./img/phone_icon.svg" alt="Phone" />
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
       </nav>
+
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com ">
+            <img src="./img/cover_icon.svg" alt="Cover" />
+            info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111">
+            <img src="./img/phone_icon.svg" alt="Phone" />
+            +38 096 111 11 11</a
+          >
+        </li>
+      </ul>
     </header>
     <main>
       <!-- Hero -->
@@ -246,53 +246,62 @@
 
     <!-- Footer -->
     <footer>
-      <p><a href="./index.html">Web Studio</a></p>
-      <address>
-        г. Киев, пр-т Леси Украинки, 26 <br />
-        info@example.com<br />
-        +38 099 111 11 11
-      </address>
-      <h2>присоединяйтесь</h2>
-      <ul>
-        <li>
+      <a href="./index.html">Web Studio</a>
+      <div>
+        <address>
           <a
-            href="https://www.instagram.com/"
-            target="_blank"
-            aria-label="Ссылка на Instagram"
-            >Instagram</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://www.twitter.com/"
-            target="_blank"
-            aria-label="Ссылка на Twitter"
-            >Twitter</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://www.facebook.com/"
-            target="_blank"
-            aria-label="Ссылка на Facebook"
-            >Facebook</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://www.linkedin.com/"
-            target="_blank"
-            aria-label="Ссылка на LinkedIn"
-            >LinkedIn</a
-          >
-        </li>
-      </ul>
-      <h2>подписаться на рассылку</h2>
-      <form>
-        <label>Email</label>
-        <input type="email" name="E-mail" />
-        <button>Подписаться</button>
-      </form>
+            href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+            >г. Киев, пр-т Леси Украинки, 26</a
+          ><br />
+          <a href="mailto:info@example.com">info@example.com</a><br />
+          <a href="tel:+380991111111">+38 099 111 11 11</a>
+        </address>
+      </div>
+      <div>
+        <h2>присоединяйтесь</h2>
+        <ul>
+          <li>
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              aria-label="Ссылка на Instagram"
+              >Instagram</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.twitter.com/"
+              target="_blank"
+              aria-label="Ссылка на Twitter"
+              >Twitter</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              aria-label="Ссылка на Facebook"
+              >Facebook</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/"
+              target="_blank"
+              aria-label="Ссылка на LinkedIn"
+              >LinkedIn</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div>
+        <h2>подписаться на рассылку</h2>
+        <form>
+          <label>Email</label>
+          <input type="email" name="E-mail" />
+          <button>Подписаться</button>
+        </form>
+      </div>
       <p>2020 | Developed by GoIT Students</p>
     </footer>
   </body>
